fixes the alignment issues

--- a/src/app/madlibs/madlibs.component.scss
+++ b/src/app/madlibs/madlibs.component.scss
@@ -1,84 +1,24 @@
 .main-content-sec {
-    display: flex;
-    height: 100vh;
-}
-
-.left-side-sec {
-    flex: 0 0 auto;
-    width: auto;
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-}
-
-.left-side-sec ul {
-    padding: 15px 20px 20px !important;
-    margin-top: 0;
-
-}
-
-.left-side-sec ul li {
-    list-style-type: none;
-    padding: 15px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-}
-
-ul li .icon-text {
-    margin-top: 10px;
-}
-
-ul li i {
-    color: #ffffff;
-    background: #9ba0a5;
-    border: 1px solid #9ba0a5 !important;
-    width: 50px;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    height: 50px;
-    border-radius: 50%;
-    font-size: 30px;
-    cursor: pointer;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-}
-
-ul li i:hover {
-    color: #9ba0a5;
-    background: #ffffff;
-    border: none !important;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-}
-
 .right-side-sec {
-    flex: 1 0 0%;
-    padding: 25px;
-    h1, h3 {
-font-weight: 600 !important;
+    .card-sec {
+        .card-content {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 70px;
+            width: 350px;
+            font-weight: 600;
+            font-size: 25px;
+            background: #d2d2d2;
+            border-radius: 3px;
+            margin: 0 auto;
+            cursor: pointer;
+        
+            &:hover {
+                background: #afb2b6;
+            }
+    } 
     }
-    h1 {
-        font-size: 40px !important;
-        margin-bottom: 0 !important;
-    }
-
+}
 }
 
-.card-sec .card-content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 70px;
-    width: 350px;
-    font-weight: 600;
-    font-size: 25px;
-    background: #d2d2d2;
-    border-radius: 3px;
-    margin: 0 auto;
-    cursor: pointer;
-
-    &:hover {
-        background: #afb2b6;
-    }
-
-}
