--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,16 +2,100 @@
 
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
-.title {
-  font-size: 40px;
-  font-weight: 600;
+
+.main-content-sec {
+  display: flex;
+  height: 100vh;
+
+  .left-side-sec {
+    flex: 0 0 auto;
+    width: auto;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+
+    ul {
+      padding: 15px 20px 20px !important;
+      margin-top: 0;
+
+      li {
+        list-style-type: none;
+        padding: 15px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        .icon-text {
+          margin-top: 10px;
+        }
+
+        i {
+          color: #ffffff;
+          background: #9ba0a5;
+          border: 1px solid #9ba0a5 !important;
+          width: 50px;
+          justify-content: center;
+          align-items: center;
+          display: flex;
+          height: 50px;
+          border-radius: 50%;
+          font-size: 30px;
+          cursor: pointer;
+          box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+
+          &:hover {
+            color: #9ba0a5;
+            background: #ffffff;
+            border: none !important;
+            box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+          }
+        }
+
+      }
+
+    }
+  }
+
+  .right-side-sec {
+    flex: 1 0 0%;
+    padding: 25px;
+
+    .title {
+      font-size: 40px;
+      font-weight: 600;
+    }
+
+    .subtitle {
+      font-size: 20px;
+      font-weight: 600;
+      margin-bottom: 15px;
+    }
+  }
 }
 
-.subtitle {
-  font-size: 20px;
-  font-weight: 600;
-  margin-bottom: 15px;
+.game-btn {
+  display: flex;
+  justify-content: center;
+
+  button {
+    border: 1px solid #737373;
+    padding: 10px 20px;
+    border-radius: 3px;
+    background-color: #737373;
+    color: #ffffff;
+    font-weight: 600;
+    border: none;
+    outline: none;
+    cursor: pointer;
+
+    &:hover {
+      background-color: #5a5252;
+      box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    }
+  }
 }
+
+// Popup Modal For Instruction code 
+
 .modal-body {
   .madlib-heading {
     display: flex;
@@ -19,11 +103,16 @@
     padding-top: 60px;
     line-height: 1.8;
   }
+
   .madlib-content {
     text-align: center;
-    width: 80%;
+    width: 72%;
     margin: auto;
-    font-size:18px;
+    font-size: 18px;
     line-height: 2;
   }
+}
+
+.modal-popup-btn {
+  margin: 60px 10px 80px !important;
 }
